--- a/index.html
+++ b/index.html
@@ -1,34 +1,22 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PingConnect</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
+<html>
+<head><title>PingConnect</title></head>
 <body>
-  <div class="container">
-    <h1>🔐 PingConnect</h1>
-    <input type="text" id="macInput" placeholder="Enter MAC address" />
-    <button onclick="searchMAC()">Search & Ping</button>
-    <div id="status"></div>
-
-    <div id="chatSection" class="hidden">
-      <textarea id="chatLog" readonly></textarea>
-      <input type="text" id="chatInput" placeholder="Type message..." />
-      <button onclick="sendEncryptedMessage()">Send</button>
-    </div>
-
-    <div id="callSection" class="hidden">
-      <button onclick="startVideoCall()">Start Video Call</button>
-      <button onclick="startVoiceCall()">Start Voice Call</button>
-      <video id="localVideo" autoplay muted></video>
-      <video id="remoteVideo" autoplay></video>
-    </div>
+  <h2>PingConnect</h2>
+  <input type="text" id="myId" placeholder="Your Unique ID">
+  <input type="text" id="targetId" placeholder="Target ID">
+  <input type="text" id="aesKey" placeholder="AES Key">
+  <button onclick="register()">Register</button>
+  <button onclick="pingUser()">Ping & Connect</button>
+  <div>
+    <textarea id="chatBox" placeholder="Type message..."></textarea>
+    <button onclick="sendChat()">Send Chat</button>
   </div>
-
-  <script src="crypto.js"></script>
-  <script src="webrtc.js"></script>
+  <video id="localVideo" autoplay muted></video>
+  <video id="remoteVideo" autoplay></video>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
